--- a/scss/style.scss
+++ b/scss/style.scss
@@ -765,12 +765,12 @@ color: #FFFFFF;
             }
             button {
                 margin-top: 20px;
-                width:58px;
+                width:138px;
     height:29px;
     border: 2px;
     background-color: #4F8FF0;
     font-family:Nunito Sana;
-    font-size: 9px;
+    font-size: 14px;
     font-weight: 900;
     line-height: 6.8px;
     color: #FFFFFF;
@@ -778,7 +778,7 @@ color: #FFFFFF;
         }
     }
     .card-1{
-        transform: translateY(-400px);
+        transform: translateY(-370px);
         width: 100%;
         height: 10vh;
         background: #010101C2;
@@ -831,13 +831,13 @@ color:#4F8FF0;
         background-color: #F7F7F7;
         button{
             margin-top: 30px;
-            margin-left:170px;
-    width:68px;
+            margin-left:130px;
+    width:168px;
     height:29px;
     border: none;
     background-color: #4F8FF0;
     font-family:Nunito Sana;
-    font-size: 4px;
+    font-size: 14px;
     font-weight: 900;
     line-height: 6.8px;
     color: #FFFFFF;
@@ -1078,6 +1078,7 @@ color:#4F8FF0;
         height: 160vh;
         background-color: #F7F7F7;
         .card-4_content{
+            padding-top: 20px;
             text-align: center;
             align-items: center;
             justify-content: center;
@@ -1130,7 +1131,7 @@ color:#4F8FF0;
     }
     .card-5{
         width: 100%;
-        height: 60vh;
+        height: 73vh;
         background-image: url(../img/Фон\ блока.svg);
         background-repeat: no-repeat;
         background-position: center;
@@ -1210,13 +1211,15 @@ color:#4F8FF0;
         .card-5_button{
             margin-top: 20px;
             margin-left: 140px;
+            gap: 50px;
             button{
-    width: 56px;
+                margin-top: 20px;
+    width: 156px;
     height: 26px;
     gap: 10px;
     background-color: #4F8FF0;
     font-family:Nunito Sana;
-    font-size: 10px;
+    font-size: 16px;
     line-height: 10px;
             }
         }
@@ -1310,12 +1313,12 @@ color:#4F8FF0;
             margin-top: 20px;
             margin-left: 150px;
             button{
-    width:83px;
+    width:143px;
     height:29px;
     border: none;
     background-color: #4F8FF0;
     font-family:Nunito Sana;
-    font-size: 10px;
+    font-size: 13px;
     font-weight: 900;
     line-height: 6.8px;
     text-align: center;
@@ -1337,15 +1340,16 @@ color:#4F8FF0;
                 font-family:Nunito Sana;
     font-size: 18px;
     font-weight: 900;
-    line-height: 12px;
+    line-height: 14px;
     text-align: center;
     color: #4F8FF0;
             }
             p{
+                padding-top: 20px;
                 font-family:Nunito Sana;
     font-size: 10px;
     font-weight: 400;
-    line-height: 9.2px;
+    line-height: 10.2px;
     text-align: center;
     color: #F8F5F4;
             }
